--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-4" data-position="25% 25%">
-									<img src="images/pic01.jpg" alt="Me :)" />
+									<img src="images/headshot.jpg" alt="Me :)" />
 								</div>
 							</section>
 
